--- a/package.json
+++ b/package.json
@@ -18,15 +18,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
     "express-promise-router": "^3.0.3",
-    "hsts": "^2.2.0",
-    "https": "^1.0.0",
     "jsdom": "^15.2.0",
     "log4js": "^5.1.0",
     "node-schedule": "^1.3.2",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "simple-youtube-api": "^5.2.1",
     "spotify-web-api-node": "^4.0.0",
     "string-similarity": "^3.0.0"
   }
