--- a/package.json
+++ b/package.json
@@ -13,19 +13,18 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.24.2"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
-    "express-promise-router": "^4.0.1",
-    "jsdom": "^15.2.0",
+    "express-promise-router": "^4.1.0",
+    "jsdom": "^15.2.1",
     "log4js": "^5.1.0",
     "node-schedule": "^1.3.2",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "spotify-web-api-node": "^4.0.0",
-    "string-similarity": "^4.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "string-similarity": "^4.0.4"
   }
 }
